bootstrap/tests/snapshots/parser_tests__err_invalid_modifier_decl.diag.snap
---
source: tests/parser_tests.rs
assertion_line: 32
expression: error_msg
---

● E2000: Parse Error [Parser]
────────────────────────────────────────────────────────────
  → <input>:1:1

     1 │
       │ async handler() {
       │ ^^^^^
     2 │     return 42
     3 │ }
       │

  ⓘ Modifier 'async' cannot be applied to declarations

  💡 Check for missing semicolons, parentheses, or keywords

  📚 Learn more: https://github.com/liva-lang/livac/blob/main/docs/ERROR_CODES.md#e2000
────────────────────────────────────────────────────────────
