bootstrap/tests/snapshots/parser_tests__err_type_errors.diag.snap
---
source: tests/parser_tests.rs
assertion_line: 32
expression: error_msg
---

● E2000: Parse Error [Parser]
────────────────────────────────────────────────────────────
  → <input>:7:5

     5 │ 
     6 │     // Error: asignación sin variable
     7 │
       │ = 42
       │ ^
     8 │ 
     9 │     // Error: función sin nombre
       │

  ⓘ Expected expression

  💡 Check for missing semicolons, parentheses, or keywords

  📚 Learn more: https://github.com/liva-lang/livac/blob/main/docs/ERROR_CODES.md#e2000
────────────────────────────────────────────────────────────
