bootstrap/tests/snapshots/parser_tests__err_unclosed_paren.diag.snap
---
source: tests/parser_tests.rs
assertion_line: 32
expression: error_msg
---

● E2000: Parse Error [Parser]
────────────────────────────────────────────────────────────
  → <input>:4:1

     2 │ main() {
     3 │     print("Hello"
     4 │
       │ }
       │ ^
       │

  ⓘ Expected RParen

  💡 Check for missing semicolons, parentheses, or keywords

  📚 Learn more: https://github.com/liva-lang/livac/blob/main/docs/ERROR_CODES.md#e2000
────────────────────────────────────────────────────────────
