bootstrap/tests/snapshots/parser_tests__ok_concurrency_advanced.ast.snap
---
source: tests/parser_tests.rs
expression: json
---
{
  "items": [
    {
      "UseRust": {
        "crate_name": "tokio",
        "alias": null
      }
    },
    {
      "UseRust": {
        "crate_name": "std::thread",
        "alias": null
      }
    },
    {
      "Function": {
        "name": "fetchMultipleUsers",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "user1"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "fetchUser"
                    },
                    "args": [
                      {
                        "Literal": {
                          "Int": 1
                        }
                      }
                    ],
                    "exec_policy": "async",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "user2"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "fetchUser"
                    },
                    "args": [
                      {
                        "Literal": {
                          "Int": 2
                        }
                      }
                    ],
                    "exec_policy": "async",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "user3"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "fetchUser"
                    },
                    "args": [
                      {
                        "Literal": {
                          "Int": 3
                        }
                      }
                    ],
                    "exec_policy": "async",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "Return": {
                "expr": {
                  "ArrayLiteral": [
                    {
                      "Identifier": "user1"
                    },
                    {
                      "Identifier": "user2"
                    },
                    {
                      "Identifier": "user3"
                    }
                  ]
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    },
    {
      "Function": {
        "name": "processData",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "data"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "fetchData"
                    },
                    "args": [],
                    "exec_policy": "async",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "processed"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "processIntensive"
                    },
                    "args": [
                      {
                        "Identifier": "data"
                      }
                    ],
                    "exec_policy": "par",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "Expr": {
                "expr": {
                  "Call": {
                    "callee": {
                      "Identifier": "logProcessStart"
                    },
                    "args": [],
                    "exec_policy": "async",
                    "type_args": []
                  }
                }
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "task_handle"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "backgroundWork"
                    },
                    "args": [],
                    "exec_policy": "task-par",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "final"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Unary": {
                    "op": "Await",
                    "operand": {
                      "Identifier": "task_handle"
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "Return": {
                "expr": {
                  "ArrayLiteral": [
                    {
                      "Identifier": "data"
                    },
                    {
                      "Identifier": "processed"
                    },
                    {
                      "Identifier": "final"
                    }
                  ]
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    },
    {
      "Function": {
        "name": "mixedConcurrencyDemo",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "a1"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "task1"
                    },
                    "args": [],
                    "exec_policy": "async",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "a2"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "task2"
                    },
                    "args": [],
                    "exec_policy": "async",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "a3"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "task3"
                    },
                    "args": [],
                    "exec_policy": "async",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "p1"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "cpuTask"
                    },
                    "args": [
                      {
                        "Literal": {
                          "Int": 1
                        }
                      }
                    ],
                    "exec_policy": "par",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "p2"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "cpuTask"
                    },
                    "args": [
                      {
                        "Literal": {
                          "Int": 2
                        }
                      }
                    ],
                    "exec_policy": "par",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "result1"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Add",
                    "left": {
                      "Binary": {
                        "op": "Add",
                        "left": {
                          "Identifier": "a1"
                        },
                        "right": {
                          "Identifier": "a2"
                        }
                      }
                    },
                    "right": {
                      "Identifier": "a3"
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "result2"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Add",
                    "left": {
                      "Identifier": "p1"
                    },
                    "right": {
                      "Identifier": "p2"
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "Expr": {
                "expr": {
                  "Call": {
                    "callee": {
                      "Identifier": "logResults"
                    },
                    "args": [
                      {
                        "Identifier": "result1"
                      },
                      {
                        "Identifier": "result2"
                      }
                    ],
                    "exec_policy": "async",
                    "type_args": []
                  }
                }
              }
            },
            {
              "Expr": {
                "expr": {
                  "Call": {
                    "callee": {
                      "Identifier": "cleanup"
                    },
                    "args": [],
                    "exec_policy": "par",
                    "type_args": []
                  }
                }
              }
            },
            {
              "Return": {
                "expr": {
                  "Binary": {
                    "op": "Mul",
                    "left": {
                      "Identifier": "result1"
                    },
                    "right": {
                      "Identifier": "result2"
                    }
                  }
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    },
    {
      "Function": {
        "name": "lazyConcurrencyDemo",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "future1"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "expensiveAsyncOperation"
                    },
                    "args": [
                      {
                        "Literal": {
                          "Int": 1
                        }
                      }
                    ],
                    "exec_policy": "async",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "future2"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "expensiveParallelOperation"
                    },
                    "args": [
                      {
                        "Literal": {
                          "Int": 2
                        }
                      }
                    ],
                    "exec_policy": "par",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "intermediate"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "doSomeWork"
                    },
                    "args": [],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "result1"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Identifier": "future1"
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "result2"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Identifier": "future2"
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "Return": {
                "expr": {
                  "Binary": {
                    "op": "Add",
                    "left": {
                      "Binary": {
                        "op": "Add",
                        "left": {
                          "Identifier": "result1"
                        },
                        "right": {
                          "Identifier": "result2"
                        }
                      }
                    },
                    "right": {
                      "Identifier": "intermediate"
                    }
                  }
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    },
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "Expr": {
                "expr": {
                  "Call": {
                    "callee": {
                      "Identifier": "print"
                    },
                    "args": [
                      {
                        "Literal": {
                          "String": "Advanced concurrency features parsed successfully"
                        }
                      }
                    ],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
