bootstrap/tests/snapshots/parser_tests__ok_control_flow.ast.snap
---
source: tests/parser_tests.rs
expression: json
---
{
  "items": [
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "x"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Literal": {
                    "Int": 10
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "If": {
                "condition": {
                  "Binary": {
                    "op": "Gt",
                    "left": {
                      "Identifier": "x"
                    },
                    "right": {
                      "Literal": {
                        "Int": 5
                      }
                    }
                  }
                },
                "then_branch": {
                  "Block": {
                    "stmts": [
                      {
                        "Expr": {
                          "expr": {
                            "Call": {
                              "callee": {
                                "Identifier": "print"
                              },
                              "args": [
                                {
                                  "Literal": {
                                    "String": "x is greater than 5"
                                  }
                                }
                              ],
                              "exec_policy": "normal",
                              "type_args": []
                            }
                          }
                        }
                      }
                    ]
                  }
                },
                "else_branch": {
                  "Block": {
                    "stmts": [
                      {
                        "Expr": {
                          "expr": {
                            "Call": {
                              "callee": {
                                "Identifier": "print"
                              },
                              "args": [
                                {
                                  "Literal": {
                                    "String": "x is not greater than 5"
                                  }
                                }
                              ],
                              "exec_policy": "normal",
                              "type_args": []
                            }
                          }
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
